--- a/2 - Frontend Basics/htu_courses/assets/css/styles.css
+++ b/2 - Frontend Basics/htu_courses/assets/css/styles.css
@@ -10,3 +10,13 @@ ul {
 .active {
     /* text-decoration: underline; */
 }
+
+footer {
+    background-color: #4d4949;
+    color: #f8f8f8f8;
+    padding: 1rem;
+}
+
+footer p {
+    text-align: center;
+}
